# lets_expect

./: .cargo-rdme.toml  Cargo.toml  LICENSE  README.md  lets_expect.code-workspace
.devcontainer/: console.sh  devcontainer.json
.github/: release.yaml
.github/workflows/: build.yaml
lets_expect/: Cargo.toml
lets_expect/src/: lib.rs
lets_expect/tests/: array.rs  before_and_after.rs  change.rs  custom_assertion.rs  custom_change_assertion.rs  enums.rs  have.rs  let.rs  make.rs  mut.rs  options.rs  panic.rs  point.rs  ranges.rs  results.rs  to.rs  tokio.rs  vecs.rs  when.rs
lets_expect_assertions/: Cargo.toml
lets_expect_assertions/src/: assertions.rs  bool.rs  change.rs  equality.rs  expected_err.rs  iterator.rs  lib.rs  match_pattern.rs  option.rs  panic.rs  partial_ord.rs  result.rs
lets_expect_core/: Cargo.toml
lets_expect_core/src/: lib.rs
lets_expect_core/src/assertions/: assertion_error.rs  assertion_result.rs  mod.rs
lets_expect_core/src/core/: after_block.rs  before_block.rs  context.rs  create_module.rs  create_test.rs  expect.rs  expect_block.rs  expectation.rs  expr_dependencies.rs  ident_from_pat.rs  keyword.rs  mod.rs  mode.rs  mutable_token.rs  runtime.rs  story.rs  story_block.rs  story_expect_to.rs  to.rs  to_block.rs  to_ident.rs  topological_sort.rs  when.rs  when_block.rs
lets_expect_core/src/execution/: executed_assertion.rs  executed_expectation.rs  executed_test_case.rs  mod.rs  prepend.rs  test_failure.rs  test_result.rs
lets_expect_core/src/expectations/: be_err_and.rs  be_ok_and.rs  be_some_and.rs  change.rs  change_expression.rs  change_inner.rs  change_many.rs  expectation.rs  expectation_tokens.rs  expectation_type.rs  expression.rs  have.rs  inner.rs  make.rs  many.rs  mod.rs  not_change.rs  not_panic.rs  panic.rs  return_value.rs
lets_expect_core/src/utils/: indent.rs  mod.rs  parse_expression.rs  reference_token.rs  to_ident.rs
lets_expect_macro/: Cargo.toml  TODO
lets_expect_macro/src/: lib.rs
src/: lib.rs
tests/: array.rs  before_and_after.rs  change.rs  custom_change_assertion.rs  enums.rs  have.rs  let.rs  make.rs  mut.rs  options.rs  panic.rs  point.rs  ranges.rs  results.rs  story.rs  to.rs  vecs.rs  when.rs
