[package]
name = "lets_expect"
version = "0.1.0"
edition = "2021"

[dependencies]
lets_expect_core = { version = "0", path = "../lets_expect_core" }
lets_expect_assertions = { version = "0", path = "../lets_expect_assertions" }
lets_expect_macro = { version = "0", path = "../lets_expect_macro" }
tokio = { version = "1", features = ["macros"], optional = true }

[dev-dependencies]
tokio-test = { version = "0.4.2" }

[features]
tokio = ["dep:tokio", "lets_expect_core/tokio"]