[package]
name = "lets_expect_assertions"
description = "lets_expect assertions. This crate is internal to the lets_expect crate and should not be used directly."
version.workspace = true
edition.workspace = true
license.workspace =  true
repository.workspace = true
rust-version.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lets_expect_core = { version = "=0.4.1", path = "../lets_expect_core" }
colored.workspace = true

[features]
tokio = ["lets_expect_core/tokio"]
