[package]
name = "lets_expect_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "*"
syn = { version = "*", features = ["full", "extra-traits"] }
english-numbers = "0.3.3"
proc-macro2 = "*"
colored = "*"
topological-sort = "0.2.2"